Add header image

--- a/index.hbs
+++ b/index.hbs
@@ -1,5 +1,7 @@
 {{!< default}}
 
+<img src="images/header.jpeg" />
+
 <div class="content-area">
     <main class="site-main container">
         <div class="post-feed">
