--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<img src="images/header.jpeg" />
+<img src="{{asset "images/header.jpeg"}}" />
 
 <div class="content-area">
     <main class="site-main container">
