Add viewport margin

--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<img src="{{asset "images/header.jpeg"}}" />
+<img src="{{asset "images/header.jpeg"}}" style="margin-bottom: 4vh"/>
 
 <div class="content-area">
     <main class="site-main container">
