--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -27,24 +27,25 @@
                 {{navigation}}
             </nav>
         {{/if}}
+        {{!-- Edited links --}}
         <div class="navbar-right">
             <div class="social">
-                <a class="social-item social-item-facebook"
-                        href="{{facebook_url @site.facebook}}" target="_blank"
-                        rel="noopener noreferrer" aria-label="Facebook">
-                        FB
-                </a>
                 <a class="social-item"
                         style="color: #833AB4;"
-                        href="{{facebook_url @site.facebook}}" target="_blank"
+                        href="https://www.instagram.com/antoninkrejci/" target="_blank"
                         rel="noopener noreferrer" aria-label="Instagram">
                         IG
                 </a>
                 <a class="social-item "
                         style="color: #FF0000;"
-                        href="{{facebook_url @site.facebook}}" target="_blank"
+                        href="https://www.youtube.com/channel/UCoVbWPUZJvFLHiKW9KruH8g" target="_blank"
                         rel="noopener noreferrer" aria-label="YouTube">
                         YT
+                </a>
+                <a class="social-item social-item-facebook"
+                        href="https://www.facebook.com/Anton%C3%ADn-Krej%C4%8D%C3%AD-362357067940648/" target="_blank"
+                        rel="noopener noreferrer" aria-label="Facebook">
+                        FB
                 </a>
             </div>
         </div>
