Update IG color

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -31,7 +31,7 @@
         <div class="navbar-right">
             <div class="social">
                 <a class="social-item"
-                        style="color: #833AB4;"
+                        style="color: #C13584;"
                         href="https://www.instagram.com/antoninkrejci/" target="_blank"
                         rel="noopener noreferrer" aria-label="Instagram">
                         IG
