--- a/default.hbs
+++ b/default.hbs
@@ -11,51 +11,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap">
 
     {{ghost_head}}
-
-    <style>
-        #mainBody {
-            height: 250px;
-            width: 1000px;
-            background-color: #ddd;
-            padding: 24px;
-            overflow: scroll;  
-            border: 2px solid #000;
-            }
-
-        #mainBody::-webkit-scrollbar {
-            -webkit-appearance: none;
-        }
-
-        #mainBody::-webkit-scrollbar:vertical {
-            width: 11px;
-        }
-
-        #mainBody::-webkit-scrollbar:horizontal {
-            height: 11px;
-        }
-
-        #mainBody::-webkit-scrollbar-thumb {
-            border-radius: 8px;
-            border: 2px solid white; /* should match background, can't be transparent */
-            background-color: rgba(0, 0, 0, .5);
-        }
-
-        #mainBody::-webkit-scrollbar-track { 
-            background-color: #fff; 
-            border-radius: 8px; 
-        } 
-        
-        #bodyContent {
-            height: 750px;
-            width: 1200px;
-            background-color: #f1f1f1;
-            padding: 24px;
-            margin-right: 24px;
-        }
-    </style>
 </head>
 
-<body id="mainBody" class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
+<body class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
     <div class="site">
         {{> header}}
         <div class="site-content">
