--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -4,7 +4,7 @@
     --white-color: #fff;
     --light-gray-color: #f1f1f1;
     --mid-gray-color: #e9e9e9;
-    --dark-gray-color: #1a1a1a;
+    --dark-gray-color: #ffffff;
     --black-color: #000;
     --font-base: Rubik, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
     --font-serif: Lora, Times, serif;
@@ -23,6 +23,7 @@ html {
 }
 
 body {
+    background-color: #161616;
     color: var(--primary-text-color);
     font-family: var(--font-base);
     font-size: 16px;
