--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
+<body style="background-color: #161616;" class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
     <div class="site">
         {{> header}}
         <div class="site-content">
