--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -18,7 +18,7 @@
                 {{#if @site.logo}}
                     <img class="logo-image" src="{{@site.logo}}" alt="{{@site.title}}">
                 {{else}}
-                    <span class="logo-text">{{@site.title}}</span>
+                    <span class="logo-text" style="color: white;">{{@site.title}}</span>
                 {{/if}}
             </a>
         </div>
