--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -2,7 +2,7 @@
     {{#foreach navigation}}
         <li
             class="menu-item menu-item-{{slug}}{{#if current}} menu-item-current{{/if}}">
-            <a class="menu-item-link"
+            <a class="menu-item-link" style="color: white;"
                 href="{{url absolute="true"}}">{{label}}</a>
         </li>
     {{/foreach}}
