Revert Dark Mode changes

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -18,7 +18,7 @@
                 {{#if @site.logo}}
                     <img class="logo-image" src="{{@site.logo}}" alt="{{@site.title}}">
                 {{else}}
-                    <span class="logo-text" style="color: white;">{{@site.title}}</span>
+                    <span class="logo-text">{{@site.title}}</span>
                 {{/if}}
             </a>
         </div>
@@ -31,7 +31,7 @@
         <div class="navbar-right">
             <div class="social">
                 <a class="social-item"
-                        style="color: #C13584;"
+                        style="color: #833AB4;"
                         href="https://www.instagram.com/antoninkrejci/" target="_blank"
                         rel="noopener noreferrer" aria-label="Instagram">
                         IG
