--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -6,7 +6,7 @@
             </nav>
         {{/if}}
         <div class="copyright">
-            Powered by <a href="https://ghost.org/" target="_blank">Ghost</a>
+            Powered by <a href="https://profiiqus.eu/" target="_blank">Prof</a> and <a href="https://ghost.org/" target="_blank">Ghost</a>
         </div>
     </div>
 </footer>
